Fixes spacing on vertical text

--- a/source/stylesheets/components/_vertical.scss
+++ b/source/stylesheets/components/_vertical.scss
@@ -1,5 +1,6 @@
-.Vertical {
-  transform: rotate(90deg) translateX(-50%);
+.Vertical.top-to-bottom {
+  transform-origin: bottom center;
+  transform: rotate(90deg) translateX(-50%) translateY(50%);
 }
 
 .Vertical.bottom-to-top {
